--- a/code.ipynb
+++ b/code.ipynb
@@ -2,6 +2,19 @@
   "cells": [
     {
       "cell_type": "markdown",
+      "source": [
+        "\n",
+        "*   Sk Nishat Saama - cs24mtech12016\n",
+        "*   Veeresh Shukla - cs24mtech14010\n",
+        "*   Devendra Dewangan - cs24resch11011\n"
+      ],
+      "metadata": {
+        "id": "Ijid72TC3uOa"
+      },
+      "id": "Ijid72TC3uOa"
+    },
+    {
+      "cell_type": "markdown",
       "id": "0e3ba36c",
       "metadata": {
         "id": "0e3ba36c"
@@ -2334,9 +2347,6 @@
     }
   ],
   "metadata": {
-    "colab": {
-      "provenance": []
-    },
     "kernelspec": {
       "display_name": "Python 3 (ipykernel)",
       "language": "python",
@@ -2353,6 +2363,9 @@
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
       "version": "3.11.11"
+    },
+    "colab": {
+      "provenance": []
     }
   },
   "nbformat": 4,
